--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ header:
 footer:
  name: "Hi, Im Falkory"
  bio: "I am a pixel artist with a focus on making art for MC mods and similar content."
-web_design: "AJ"
+web_design: "Falkory"
 # Configure which exif data to display
 # Tag is the actual exif tag, icon is a fontawesome icon. Use JSON notation without line breaks
 exif: '[{"tag": "Model", "icon": "camera-retro"}, {"tag": "FNumber", "icon": "dot-circle-o"}, {"tag": "ExposureTime", "icon": "clock-o"}, {"tag": "ISOSpeedRatings", "icon": "info-circle"}]'
